infrastructure/config/phpipam/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: phpipam
  labels:
    app.kubernetes.io/name: phpipam
