infrastructure/config/phpipam/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpipam
  namespace: phpipam
  labels:
    app.kubernetes.io/name: phpipam
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: 192.168.2.160
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ipam.bsdserver.nl
      secretName: phpipam-tls
  rules:
    - host: ipam.bsdserver.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpipam
                port:
                  number: 80
